# Vectorial_draw

./:  CharToInt.c  Area.c  Area.h  Bool.c  Bool.h  CMakeLists.txt  CharToInt.h  Circle.c  Circle.h  Commands.c  Commands.h  Forms.c  Forms.h  LLCShape.c  LLCShape.h  LLC_Shape.c  LLC_Shape.h  Line.c  Line.h  Menu.c  Menu.h  Pixel.c  Pixel.h  Point.c  Point.h  Polygon.c  Polygon.h  README.md  Rect.c  Rect.h  Shapes.c  Shapes.h  Square.c  Square.h  include.h  main.c  stringToArray.c  stringToArray.h
